--- a/styles/base.less
+++ b/styles/base.less
@@ -1,6 +1,6 @@
 @import "syntax-variables";
 
-atom-text-editor {
+atom-text-editor::shadow {
   background-color: @syntax-background-color !important;
   color: @syntax-text-color;
 
@@ -54,241 +54,241 @@ atom-text-editor {
 // Syntax styles
 
 .syntax--comment {
-  color: @light-gray;
+  color: @light-gray !important;
 }
 
 .syntax--keyword {
-  color: @purple;
+  color: @purple !important;
 
   &.syntax--control {
-    color: @purple;
+    color: @purple !important;
   }
 
   &.syntax--operator {
-    color: @syntax-text-color;
+    color: @syntax-text-color !important;
   }
 
   &.syntax--other.syntax--special-method {
-    color: @blue;
+    color: @blue !important;
   }
 
   &.syntax--other.syntax--unit {
-    color: @orange;
+    color: @orange !important;
   }
 }
 
 .syntax--storage {
-  color: @purple;
+  color: @purple !important;
 }
 
 .syntax--constant {
-  color: @orange;
+  color: @orange !important;
 
   &.syntax--character.syntax--escape {
-    color: @cyan;
+    color: @cyan !important;
   }
 
   &.syntax--numeric {
-    color: @orange;
+    color: @orange !important;
   }
 
   &.syntax--other.syntax--color {
-    color: @cyan;
+    color: @cyan !important;
   }
 
   &.syntax--other.syntax--symbol {
-    color: @green;
+    color: @green !important;
   }
 }
 
 .syntax--variable {
-  color: @red;
+  color: @red !important;
 
   &.syntax--interpolation {
-    color: darken(@red, 10%);
+    color: darken(@red, 10%) !important;
   }
 
   &.syntax--parameter.syntax--function {
-    color: @syntax-text-color;
+    color: @syntax-text-color !important;
   }
 }
 
 .syntax--invalid.syntax--illegal {
-  background-color: @red;
+  background-color: @red !important;
   color: @syntax-background-color;
 }
 
 .syntax--string {
-  color: @green;
+  color: @green !important;
 
 
   &.syntax--regexp {
-    color: @cyan;
+    color: @cyan !important;
 
     .syntax--source.syntax--ruby.syntax--embedded {
-      color: @orange;
+      color: @orange !important;
     }
   }
 
   &.syntax--other.syntax--link {
-    color: @red;
+    color: @red !important;
   }
 }
 
 .syntax--punctuation {
-  &.syntax--definition {
-    &.syntax--comment {
-      color: @light-gray;
+  &.syntax--definition  !important{
+    &.syntax--comment  !important{
+      color: @light-gray !important;
     }
 
     &.syntax--string,
-    &.syntax--variable,
-    &.syntax--parameters,
-    &.syntax--array {
-      color: @syntax-text-color;
+    &.syntax--variable !important,
+    &.syntax--parameters !important,
+    &.syntax--array  !important{
+      color: @syntax-text-color !important;
     }
 
     &.syntax--heading,
-    &.syntax--identity {
-      color: @blue;
+    &.syntax--identity  !important{
+      color: @blue !important;
     }
 
     &.syntax--bold {
-      color: @light-orange;
+      color: @light-orange !important;
       font-weight: bold;
     }
 
     &.syntax--italic {
-      color: @purple;
+      color: @purple !important;
       font-style: italic;
     }
   }
 
   &.syntax--section.syntax--embedded {
-    color: darken(@red, 10%);
+    color: darken(@red, 10%) !important;
   }
 
 }
 
 .syntax--support {
-  &.syntax--class {
-    color: @light-orange;
+  &.syntax--class  !important{
+    color: @light-orange !important;
   }
 
   &.syntax--function  {
-    color: @cyan;
+    color: @cyan !important;
 
     &.syntax--any-method {
-      color: @blue;
+      color: @blue !important;
     }
   }
 }
 
 .syntax--entity {
-  &.syntax--name.syntax--function {
-    color: @blue;
+  &.syntax--name.syntax--function  !important{
+    color: @blue !important;
   }
   &.syntax--name.syntax--type {
-    color: @light-orange;
+    color: @light-orange !important;
     text-decoration: underline;
   }
 
   &.syntax--other.syntax--inherited-class {
-    color: @green;
+    color: @green !important;
   }
   &.syntax--name.syntax--class, &.syntax--name.syntax--type.syntax--class {
-    color: @light-orange;
+    color: @light-orange !important;
   }
 
   &.syntax--name.syntax--section {
-    color: @blue;
+    color: @blue !important;
   }
 
   &.syntax--name.syntax--tag {
-    color: @red;
+    color: @red !important;
     text-decoration: underline;
   }
 
   &.syntax--other.syntax--attribute-name {
-    color: @orange;
+    color: @orange !important;
 
     &.syntax--id {
-      color: @blue;
+      color: @blue !important;
     }
   }
 }
 
 .syntax--meta {
-  &.syntax--class {
-    color: @light-orange;
+  &.syntax--class  !important{
+    color: @light-orange !important;
   }
 
   &.syntax--link {
-    color: @orange;
+    color: @orange !important;
   }
 
   &.syntax--require {
-    color: @blue;
+    color: @blue !important;
   }
 
   &.syntax--selector {
-    color: @purple;
+    color: @purple !important;
   }
 
   &.syntax--separator {
-    background-color: @gray;
+    background-color: @gray !important;
     color: @syntax-text-color;
   }
 }
 
 .syntax--none {
-  color: @syntax-text-color;
+  color: @syntax-text-color !important;
 }
 
 .syntax--markup {
-  &.syntax--bold {
-    color: @orange;
+  &.syntax--bold  !important{
+    color: @orange !important;
     font-weight: bold;
   }
 
   &.syntax--changed {
-    color: @purple;
+    color: @purple !important;
   }
 
   &.syntax--deleted {
-    color: @red;
+    color: @red !important;
   }
 
   &.syntax--italic {
-    color: @purple;
+    color: @purple !important;
     font-style: italic;
   }
 
   &.syntax--heading .syntax--punctuation.syntax--definition.syntax--heading {
-    color: @blue;
+    color: @blue !important;
   }
 
   &.syntax--inserted {
-    color: @green;
+    color: @green !important;
   }
 
   &.syntax--list {
-    color: @red;
+    color: @red !important;
   }
 
   &.syntax--quote {
-    color: @orange;
+    color: @orange !important;
   }
 
   &.syntax--raw.syntax--inline {
-    color: @green;
+    color: @green !important;
   }
 }
 
 .syntax--source.syntax--gfm .syntax--markup {
-  -webkit-font-smoothing: auto;
+  -webkit-font-smoothing: auto !important;
   &.syntax--heading {
-    color: @green;
+    color: @green !important;
   }
 }
 
