--- a/styles/base.less
+++ b/styles/base.less
@@ -136,20 +136,20 @@ atom-text-editor::shadow {
 }
 
 .syntax--punctuation {
-  &.syntax--definition  !important{
-    &.syntax--comment  !important{
+  &.syntax--definition {
+    &.syntax--comment {
       color: @light-gray !important;
     }
 
     &.syntax--string,
-    &.syntax--variable !important,
-    &.syntax--parameters !important,
-    &.syntax--array  !important{
+    &.syntax--variable ,
+    &.syntax--parameters ,
+    &.syntax--array  {
       color: @syntax-text-color !important;
     }
 
     &.syntax--heading,
-    &.syntax--identity  !important{
+    &.syntax--identity {
       color: @blue !important;
     }
 
@@ -171,7 +171,7 @@ atom-text-editor::shadow {
 }
 
 .syntax--support {
-  &.syntax--class  !important{
+  &.syntax--class {
     color: @light-orange !important;
   }
 
@@ -185,7 +185,7 @@ atom-text-editor::shadow {
 }
 
 .syntax--entity {
-  &.syntax--name.syntax--function  !important{
+  &.syntax--name.syntax--function {
     color: @blue !important;
   }
   &.syntax--name.syntax--type {
@@ -219,7 +219,7 @@ atom-text-editor::shadow {
 }
 
 .syntax--meta {
-  &.syntax--class  !important{
+  &.syntax--class {
     color: @light-orange !important;
   }
 
@@ -246,7 +246,7 @@ atom-text-editor::shadow {
 }
 
 .syntax--markup {
-  &.syntax--bold  !important{
+  &.syntax--bold {
     color: @orange !important;
     font-weight: bold;
   }
