Updates to syntax
Syntax css and muted gray updates.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,6 +1,6 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@muted-gray: #2D3A50;
+@muted-gray: #46556F;
 @very-light-gray: #868f9e;
 @light-gray: #3e4a5c;
 @gray: #212939;
