--- a/styles/base.less
+++ b/styles/base.less
@@ -1,7 +1,7 @@
 @import "syntax-variables";
 
-atom-text-editor::shadow {
-  background-color: @syntax-background-color !important;
+atom-text-editor.editor {
+  background-color: @syntax-background-color;
   color: @syntax-text-color;
 
   .wrap-guide {
@@ -54,241 +54,241 @@ atom-text-editor::shadow {
 // Syntax styles
 
 .syntax--comment {
-  color: @light-gray !important;
+  color: @light-gray;
 }
 
 .syntax--keyword {
-  color: @purple !important;
+  color: @purple;
 
   &.syntax--control {
-    color: @purple !important;
+    color: @purple;
   }
 
   &.syntax--operator {
-    color: @syntax-text-color !important;
+    color: @syntax-text-color;
   }
 
   &.syntax--other.syntax--special-method {
-    color: @blue !important;
+    color: @blue;
   }
 
   &.syntax--other.syntax--unit {
-    color: @orange !important;
+    color: @orange;
   }
 }
 
 .syntax--storage {
-  color: @purple !important;
+  color: @purple;
 }
 
 .syntax--constant {
-  color: @orange !important;
+  color: @orange;
 
   &.syntax--character.syntax--escape {
-    color: @cyan !important;
+    color: @cyan;
   }
 
   &.syntax--numeric {
-    color: @orange !important;
+    color: @orange;
   }
 
   &.syntax--other.syntax--color {
-    color: @cyan !important;
+    color: @cyan;
   }
 
   &.syntax--other.syntax--symbol {
-    color: @green !important;
+    color: @green;
   }
 }
 
 .syntax--variable {
-  color: @red !important;
+  color: @red;
 
   &.syntax--interpolation {
-    color: darken(@red, 10%) !important;
+    color: darken(@red, 10%);
   }
 
   &.syntax--parameter.syntax--function {
-    color: @syntax-text-color !important;
+    color: @syntax-text-color;
   }
 }
 
 .syntax--invalid.syntax--illegal {
-  background-color: @red !important;
+  background-color: @red;
   color: @syntax-background-color;
 }
 
 .syntax--string {
-  color: @green !important;
+  color: @green;
 
 
   &.syntax--regexp {
-    color: @cyan !important;
+    color: @cyan;
 
     .syntax--source.syntax--ruby.syntax--embedded {
-      color: @orange !important;
+      color: @orange;
     }
   }
 
   &.syntax--other.syntax--link {
-    color: @red !important;
+    color: @red;
   }
 }
 
 .syntax--punctuation {
   &.syntax--definition {
     &.syntax--comment {
-      color: @light-gray !important;
+      color: @light-gray;
     }
 
     &.syntax--string,
     &.syntax--variable ,
     &.syntax--parameters ,
     &.syntax--array  {
-      color: @syntax-text-color !important;
+      color: @syntax-text-color;
     }
 
     &.syntax--heading,
     &.syntax--identity {
-      color: @blue !important;
+      color: @blue;
     }
 
     &.syntax--bold {
-      color: @light-orange !important;
+      color: @light-orange;
       font-weight: bold;
     }
 
     &.syntax--italic {
-      color: @purple !important;
+      color: @purple;
       font-style: italic;
     }
   }
 
   &.syntax--section.syntax--embedded {
-    color: darken(@red, 10%) !important;
+    color: darken(@red, 10%);
   }
 
 }
 
 .syntax--support {
   &.syntax--class {
-    color: @light-orange !important;
+    color: @light-orange;
   }
 
   &.syntax--function  {
-    color: @cyan !important;
+    color: @cyan;
 
     &.syntax--any-method {
-      color: @blue !important;
+      color: @blue;
     }
   }
 }
 
 .syntax--entity {
   &.syntax--name.syntax--function {
-    color: @blue !important;
+    color: @blue;
   }
   &.syntax--name.syntax--type {
-    color: @light-orange !important;
+    color: @light-orange;
     text-decoration: underline;
   }
 
   &.syntax--other.syntax--inherited-class {
-    color: @green !important;
+    color: @green;
   }
   &.syntax--name.syntax--class, &.syntax--name.syntax--type.syntax--class {
-    color: @light-orange !important;
+    color: @light-orange;
   }
 
   &.syntax--name.syntax--section {
-    color: @blue !important;
+    color: @blue;
   }
 
   &.syntax--name.syntax--tag {
-    color: @red !important;
+    color: @red;
     text-decoration: underline;
   }
 
   &.syntax--other.syntax--attribute-name {
-    color: @orange !important;
+    color: @orange;
 
     &.syntax--id {
-      color: @blue !important;
+      color: @blue;
     }
   }
 }
 
 .syntax--meta {
   &.syntax--class {
-    color: @light-orange !important;
+    color: @light-orange;
   }
 
   &.syntax--link {
-    color: @orange !important;
+    color: @orange;
   }
 
   &.syntax--require {
-    color: @blue !important;
+    color: @blue;
   }
 
   &.syntax--selector {
-    color: @purple !important;
+    color: @purple;
   }
 
   &.syntax--separator {
-    background-color: @gray !important;
+    background-color: @gray;
     color: @syntax-text-color;
   }
 }
 
 .syntax--none {
-  color: @syntax-text-color !important;
+  color: @syntax-text-color;
 }
 
 .syntax--markup {
   &.syntax--bold {
-    color: @orange !important;
+    color: @orange;
     font-weight: bold;
   }
 
   &.syntax--changed {
-    color: @purple !important;
+    color: @purple;
   }
 
   &.syntax--deleted {
-    color: @red !important;
+    color: @red;
   }
 
   &.syntax--italic {
-    color: @purple !important;
+    color: @purple;
     font-style: italic;
   }
 
   &.syntax--heading .syntax--punctuation.syntax--definition.syntax--heading {
-    color: @blue !important;
+    color: @blue;
   }
 
   &.syntax--inserted {
-    color: @green !important;
+    color: @green;
   }
 
   &.syntax--list {
-    color: @red !important;
+    color: @red;
   }
 
   &.syntax--quote {
-    color: @orange !important;
+    color: @orange;
   }
 
   &.syntax--raw.syntax--inline {
-    color: @green !important;
+    color: @green;
   }
 }
 
 .syntax--source.syntax--gfm .syntax--markup {
-  -webkit-font-smoothing: auto !important;
+  -webkit-font-smoothing: auto;
   &.syntax--heading {
-    color: @green !important;
+    color: @green;
   }
 }
 
